--- a/playground/package.json
+++ b/playground/package.json
@@ -1,6 +1,7 @@
 {
   "name": "playground",
   "type": "module",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -9,6 +10,5 @@
   },
   "devDependencies": {
     "vite": "^5.2.9"
-  },
-  "version": "0.2.0"
+  }
 }
