--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-plugin-env-runtime",
   "type": "module",
   "version": "0.3.0",
-  "packageManager": "pnpm@9.0.1",
+  "packageManager": "pnpm@9.0.2",
   "description": "Configure environment variables on runtime.",
   "author": "Werheng <werheng.zhang@gmail.com>",
   "license": "MIT",
@@ -40,7 +40,7 @@
     "play:preview": "cd playground && vite preview",
     "test": "vitest",
     "test:run": "vitest run",
-    "commit": "git-cz",
+    "commit": "cz",
     "release": "bumpp -r",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
