--- a/playground/.env
+++ b/playground/.env
@@ -1,6 +1,6 @@
 VITE_APP_TITLE = VITE_APP
 VITE_APP_COLOR = RED
 VITE_BASE_URL = url
+VITE_BASE_URL_AUTH = auth
 VITE_EXCLUDE_VALUE = exclude
 APP_TITLE = APP
-VITE_OPEN_PROXY = true
